# footprint

./: .continuerc.json  .gitignore  .mise.toml  .releaserc.cjs  .taurignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
assets/: footprint.pxd
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/diesel/2024-03-27-125026_create_patients/: down.sql  up.sql
src-tauri/diesel/migrations/2024-03-27-125026_create_patients/: up.sql
src-tauri/diesel/migrations/2024-04-06-052658_create_consultation_types/: down.sql  up.sql
src-tauri/diesel/migrations/2024-04-08-190711_create_consultations/: down.sql  up.sql
src-tauri/diesel/migrations/2024-04-22-181039_bank_accounts/: down.sql  up.sql
src-tauri/diesel/migrations/2024-04-22-182039_bank_deposits/: down.sql  up.sql
src-tauri/diesel/migrations/2024-04-22-182339_create_payments/: down.sql  up.sql
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/adapter/primary/tauri_command/: mod.rs  patient_add.rs
src-tauri/src/adapter/primary/tauri_command/bank_account/: bank_account_add_command.rs  bank_account_dto.rs  bank_account_list_command.rs  mod.rs
src-tauri/src/adapter/primary/tauri_command/consultation/: consultation_add_command.rs  consultation_aggregate_dto.rs  consultation_detail_command.rs  consultation_dto.rs  consultation_list_command.rs  consultation_update_command.rs  mod.rs
src-tauri/src/adapter/primary/tauri_command/consultation_type/: consultation_type_add_command.rs  consultation_type_dto.rs  consultation_type_list_command.rs  mod.rs
src-tauri/src/adapter/primary/tauri_command/patient/: mod.rs  patient_add_command.rs  patient_aggregate_command.rs  patient_delete_command.rs  patient_detail_command.rs  patient_dto.rs  patient_list_command.rs  patient_list_dto.rs  patient_update_command.rs
src-tauri/src/adapter/primary/tauri_command/payment/: mod.rs  payment_add_command.rs  payment_dto.rs  payment_update_command.rs
src-tauri/src/adapter/secondary/sqlite/: mod.rs
src-tauri/src/adapter/secondary/sqlite/bank_account/: bank_account_model.rs  bank_account_repository.rs  bank_account_schema.rs  mod.rs
src-tauri/src/adapter/secondary/sqlite/consultation/: consultation_model.rs  consultation_repository.rs  consultation_schema.rs  mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/aggregate/: consultation.rs  patient.rs
src-tauri/src/domain/entity/: bank_account.rs  consultation.rs  consultation_type.rs  mod.rs  patient.rs  payment.rs
src-tauri/src/domain/helper/: data_time.rs  mod.rs  validation.rs
src-tauri/src/domain/value_object/: consultation_list_filter.rs  consultation_location.rs  consultation_status.rs  contact_information.rs  listing_sort.rs  mod.rs  name.rs  payment_list_filter.rs  payment_method.rs  payment_status.rs  personal_name.rs  postal_address.rs
src-tauri/src/infrastructure/: database.rs  error.rs  mod.rs  path.rs  state.rs  type_alias.rs
src-tauri/src/tests/domain/entity/: consultation.rs  mod.rs  patient.rs  payment.rs
src-tauri/src/use_case/: bank_account_add.rs  bank_account_list.rs  consultation_add.rs  consultation_detail.rs  consultation_list.rs  consultation_type_add.rs  consultation_type_list.rs  consultation_update.rs  mod.rs  patient_add.rs  patient_aggregate.rs  patient_delete.rs  patient_detail.rs  patient_list.rs  patient_update.rs  payment_add.rs  payment_update.rs
(+154 files in other folders)
