[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.6", features = [] }

[dependencies]
chrono = {version="0.4", features = ["serde"] }
diesel = { version = "2.1", features = [
    "sqlite",
    "chrono",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.1"
email_address = "0.2"
log = "0.4"
phonenumber = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.8", features = [] }
tauri-plugin-os = "2.0.0-beta"
uuid = {version = "1.8", features = ["v4"] }
validator = { version = "0.17", features = ["derive"] }
