[package]
name = "footprint"
version = "0.2.0"
description = "A light and simple multi-platform podiatric software"
authors = ["Jérémy Jousse"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.15", features = [] }

[dependencies]
celes = "2.4.0"
chrono = {version="0.4", features = ["serde"] }
diesel = { version = "2.1", features = [
    "sqlite",
    "chrono",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.1"
email_address = "0.2"
log = "0.4"
phonenumber = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
# libsqlite3-sys = { version = ">=0.17.2, <0.27.0", features = ["bundled"] }
tauri = { version = "2.0.0-beta.19", features = ["devtools"] }
tauri-plugin-os = "2.0.0-beta.4"
tauri-plugin-store = "2.0.0-beta.6"
thiserror = "1.0"
tokio = { version = "1.35.1", features = ["fs", "macros"] }
uuid = {version = "1.8", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
